+ Updated raw decrunchers for Zilog Z80 contributed by Antonio Villena.
+ Added raw decrunchers for Intel 8080 contributed by Ivan Gorodetsky.
+ Added raw decrunchers for ARM 32bit thumb2 contributed by ALeX Kazik.
+ Updated raw z80 decrunchers for exo 3.0.x provided by Antonio Villena.
+ Implement optional forward decrunching properly in exodecrunch.s and as a
  consequence of this also remove krilldecr.s
+ Implement sequence read pointer blacklist to be able to avoid reading from
  specified memory areas like hardware registers (Experimental feature),
  Requested by Oziphantom.
+ update dasm and add acme exodecrunch sources
+ Improve compression by previous offset reuse, -P-32 to disable
+ Extended -e and -E to be able to reuse/calculate shared header/table info
  for multiple crunched files. (Experimental feature, no direct support in
  exodecrunch.s yet), Requested by Lazycow

2019-01-05
Release of 3.0.2 source code and Win32 binaries.
+ Add documentation about level, mem and raw outfile structure.
+ Fix raw -d -r combination to reverse the inbuffer before decrunch.
+ Fix -P0 literal sequences bug in exodec.c, Bug reported by Nino Porcino.
+ improved cruncher tuning for slightly improved compression on average.
+ Added sfx support for a new target, BBC Micro B (-t 0xbbcb).
+ Added -P+16 awareness to exodecrunch.s
+ Fix bucket optimization to be -T+4 aware in search.c, Bug reported by
  Ciccioriccio.
+ Fix absolute offset overflow bug in sfxdecr.s. Bug reported by Comos.

2018-08-10
Release of 3.0.1 source code and Win32 binaries.
+ Add missing clc to the new 6502 decrunchers. Bug reported by Soci.

2018-05-16
Release of 3.0.0 source code and Win32 binaries.
+ Up to almost 50% faster 6502 decruncher (sfx and stand-alone). However the
  bitstream format has changed in an incompatible way. See exo30info.txt for
  more info.

2018-03-08
Release of 2.0.11 source code and Win32 binaries.
+ No change from preview 3
2018-03-06
Release of 2.0.11 preview 3